--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,6 +494,7 @@ a:hover {
 */
 .navbar {
   padding: 0;
+  text-align: center;
 }
 
 .navbar ul {
@@ -1308,7 +1309,7 @@ a:hover {
 .card-blog .post-date {
   color: #4e4e4e;
   display: inline-block;
-  float: right;
+  
 }
 
 /*--------------------------------------------------------------
