--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1309,7 +1309,6 @@ a:hover {
 .card-blog .post-date {
   color: #4e4e4e;
   display: inline-block;
-  
 }
 
 /*--------------------------------------------------------------
@@ -1489,7 +1488,6 @@ footer .credits a {
 }
 
 h1 {
-  
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 30px;
@@ -1498,29 +1496,56 @@ h1 {
 
 /* Customize the appearance of the publication section */
 
-#publication {
+#publication,
+#short-term {
   background-color: #f8f9fa;
   padding: 80px 0;
   text-align: center;
 }
 
-#publication h1 {
+#short-term {
+  background-color: #f5f5f5;
+}
+
+#publication h1,
+#short-term h1 {
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 30px;
   color: #007bff;
 }
-#publication ol {
+#publication ol,
+#short-term ol {
   list-style: none;
   padding-left: 0;
   margin-bottom: 0;
 }
 
-#publication li {
+#publication li,
+#short-term li {
   font-size: 18px;
   margin-bottom: 10px;
   text-align: left;
   color: #555;
+}
+
+.research-images {
+  max-width: 25rem;
+  max-height: 10rem;
+  margin-bottom: 1rem;
+}
+
+.research-card {
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.team {
+  width: 10rem;
+  border-radius: 50%;
 }
 
 /* Add box shadow to the publication container */
@@ -1533,7 +1558,6 @@ h1 {
 .container {
   max-width: 960px;
   margin: 0 auto;
-  
 }
 
 /* Add some spacing to the rows */
