--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-/**
-* Template Name: DevFolio - v4.10.0
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
@@ -1541,11 +1531,27 @@ h1 {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.research-card h6 {
+  color: #ed3c0d;
+}
+
+.research-card:hover {
+  scale: 1.1;
+  background-color: #fff;
+}
+
+.research-items {
+  list-style: none;
 }
 
 .team {
   width: 10rem;
   border-radius: 50%;
+  aspect-ratio: 1;
 }
 
 /* Add box shadow to the publication container */
